--- a/met-search.css
+++ b/met-search.css
@@ -1,82 +1,190 @@
 /* Simple built-by-scratch framework stuff */
 /* Typography imported from Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
+
+/* Sets up base variables. Color palette for one. */
+:root { 
+  --primary-color: #820933;
+  --primary-accent-color: #D84797;
+  --secondary-color: #D2FDFF;
+  --secondary-accent-color-blue: #3ABEFF;
+  --secondary-accent-color-seafoam: #26FFE6;
+  --white: #ffffff;
+  --black: #000000;
+  --gray-medium: #5D5D5D;
+  --gray-dark: #212121;
+}
+
 body {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 1.5em;
+  color: var(--gray-dark);
 }
 
 h1 {
   font-size: 1.75em;
   margin: 25px 0 10px;
   text-align: center;
+  color: #ffffff;
 }
-/* Grid stuff. Found this very helpful: https: //css-tricks.com/look-ma-no-media-queries-responsive-layouts-using-css-grid/ */
-/* .wrapper {
-  display: grid;
-  grid-template-columns: repeat(4 1fr);
-  grid-template-rows: repeat(2, 300px);
-} */
+
+.wrapper {
+  padding: 2em 4em;
+}
 
 .app {
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+  font-family: 'Poppins', Helvetica, sans-serif;
+}
+
+#counter {
+  min-height: 24px;
   text-align: center;
-  background-color: #fcfbfb;
-  font-family: 'Open Sans', sans-serif;
+  p {
+    margin: 0;
+  }
+}
+
+#pager-controls {
+  margin: 1em 0 2em 0;
+  display: grid;
+  grid-template-columns: 5fr 1fr 5fr;
 }
 
 .header {
-  height: 60px;
-  background-color: #4b2e83;
+  padding: 0.5em 4em;
+  height: 80px;
+  background-color: var(--black);
   text-align: left;
+  h1 {
+    margin: .25em 0;
+  }
 }
 
-.block-w {
-  height: 40px;
-  fill: #fff;
-  margin-left: 10px;
-  margin-top: 10px;
-}
-
-ul {list-style-type: none; padding:0;margin:0;}
-.current-result-set-container {
+ul {
+  &.current-result-set-container {
   padding: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 2rem;
+  list-style-type: none; 
+  padding: 0;
+  margin: 0;}
 }
 
 .result {
   background-color: #ffffff;
-  padding: 1rem;
-  box-shadow: 0 0 6px rgba(164, 164, 164, .5);
-  border-radius: .5rem;
-
+  box-shadow: 0 0 3px rgba(164, 164, 164, .5);
+  border: 1px solid var(--gray-medium);
   img {
     width: 100%;
   }
 }
 
-/* Form stuff */
-.selection {
-  padding: 1rem .25rem 0 .25rem;
+.hidden {
+  visibility: hidden;
+}
+
+/* Form styles. */
+.search {
+  display: grid;
+  grid-template-columns: 1fr 7fr 2fr;
+  grid-gap: 1em;
+}
+
+.validate {
+  grid-column: 2/3;
+  color: var(--primary-accent-color);
+}
+
+input, select {
+  border-radius: 0;
+  font-family: 'Poppins', Helvetica, sans-serif;
+  outline: 0;
+  border: 1px solid;
+}
+
+input[type=search] {
+  padding: 0.5em; 
+  font-size: 1.5em;
+}
+
+input.button, button {
+  border-radius: 0;
+  border-width: 1px;
+  padding: 0.75em;
+  font-size: 1em;
+  font-family: 'Poppins', Helvetica, sans-serif;
+  font-weight: 600;
+  border: 1px solid var(--primary-accent-color);
+  color: var(--primary-accent-color);
+  background-color: var(--white);
+}
+
+input.button {
+  font-size: 1.5em;
+}
+
+*:disabled {
+  background-color: rgb(229, 228, 228);
+  border-color: rgb(152, 151, 151);
+  color: #5d5d5d;
+}
+
+input, button, select {
+  &:focus {
+    border-radius: 0;
+    outline-offset: 3px;
+    outline: solid 3px var(--primary-accent-color);
+  }
+}
+
+input[type=submit], button {
+  &:focus {
+    background-color: var(--primary-accent-color);
+    color: var(--white);
+  }
 }
 
 label {
-  margin-right: .5rem;
   font-weight: 700;
 }
 
 select {
-  /* padding: .5rem;
-  background-color: #e8e3d3;
-  color: #000000;
-  font-size: .9rem;
-  font-family: 'Open Sans', sans-serif;
-  cursor: pointer;
-  border-radius: 5px; */
+  padding: 1em; 
+  border-radius: 0;
+  margin: 0 1em;
 }
 
 select:hover, 
 select:active {
-  border-color: #4b2e83;
+  border-color: var(--primary-color);
+}
+
+/* Form validation. */
+.invalid {
+  border: 1px solid var(--primary-color);
+  background-color: #fdd9e6;
+  &::placeholder {
+    color: var(--primary-color);
+  }
+}
+
+input:invalid {
+  border: 1px solid var(--primary-accent-color);
+}
+
+/* User messages */
+.alert {
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-accent-color-blue);
+  padding: 1em;
+  margin-bottom: 2em;
+  h2 {
+    margin: 0;
+  }
 }
