--- a/met-search.css
+++ b/met-search.css
@@ -11,6 +11,7 @@
   --secondary-accent-color-seafoam: #26FFE6;
   --white: #ffffff;
   --black: #000000;
+  --gray-light: #bcbaba;
   --gray-medium: #5D5D5D;
   --gray-dark: #212121;
 }
@@ -23,15 +24,25 @@ body {
   color: var(--gray-dark);
 }
 
-h1 {
-  font-size: 1.75em;
-  margin: 25px 0 10px;
-  text-align: center;
-  color: #ffffff;
+.header {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 1em;
+  /* max-height: 100px; */
+  background-color: var(--black);
+  text-align: left;
+  h1 {
+    padding-left: 2em;
+    margin-inline: 0;
+    margin-block: 0;
+    font-size: 1.75em;
+    margin: 25px 0 10px;
+    color: #ffffff;
+  }
 }
 
 .wrapper {
-  padding: 2em 4em;
+  padding: 2em 1em;
 }
 
 .app {
@@ -55,16 +66,9 @@ h1 {
   grid-template-columns: 5fr 1fr 5fr;
 }
 
-.header {
-  padding: 0.5em 4em;
-  height: 80px;
-  background-color: var(--black);
-  text-align: left;
-  h1 {
-    margin: .25em 0;
-  }
-}
 
+
+/* Results area. */
 ul {
   &.current-result-set-container {
   padding: 2rem;
@@ -74,17 +78,68 @@ ul {
   list-style-type: none; 
   padding: 0;
   margin: 0;}
+  word-wrap: break-word;
 }
 
 .result {
+  display: grid;
   background-color: #ffffff;
-  box-shadow: 0 0 3px rgba(164, 164, 164, .5);
-  border: 1px solid var(--gray-medium);
+  box-shadow: 0 0 5px rgba(164, 164, 164, .5);
+  border: 1px solid var(--gray-light);
+  h3 { margin: 0;}
+  p {margin: 0;}
   img {
     width: 100%;
   }
+  hr {
+    border: 0;
+    height: 1px;
+    background-color: var(--gray-medium);
+    margin: 1em 0;
+  }
+  .card {
+    display: grid;
+    .card-body {
+      align-self: end;
+      /* display: grid; */
+      /* grid-template-columns: subgrid; */
+      padding: 0.5em 1em;
+    }
+  }
+
+  .object-meta-data {
+    color: var(--gray-medium);
+    h4 {margin: 0;}
+    dl {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+    }
+    dd, dt {
+      margin: 0;
+      padding: 0;
+      font-size: 0.8em;
+      line-height: 1.1em;
+      margin-bottom: 0.5em;
+    }
+    dt {
+      justify-self: end;
+      padding-right: 1em;
+    }
+  }
 }
 
+.no-results {
+  text-align: center;
+}
+
+.loading-results {
+  text-align: center;
+  img {
+    max-width: 50vw;
+  }
+}
+
+/* General utility. */
 .hidden {
   visibility: hidden;
 }
@@ -92,12 +147,10 @@ ul {
 /* Form styles. */
 .search {
   display: grid;
-  grid-template-columns: 1fr 7fr 2fr;
+  grid-template-columns: 1fr;
   grid-gap: 1em;
 }
-
 .validate {
-  grid-column: 2/3;
   color: var(--primary-accent-color);
 }
 
@@ -113,7 +166,9 @@ input[type=search] {
   font-size: 1.5em;
 }
 
-input.button, button {
+input.button, 
+button, 
+a.btn {
   border-radius: 0;
   border-width: 1px;
   padding: 0.75em;
@@ -123,6 +178,11 @@ input.button, button {
   border: 1px solid var(--primary-accent-color);
   color: var(--primary-accent-color);
   background-color: var(--white);
+}
+a.btn {
+  margin: 0.5em 0;
+  display: block;
+  text-align: center;
 }
 
 input.button {
@@ -135,7 +195,7 @@ input.button {
   color: #5d5d5d;
 }
 
-input, button, select {
+input, button, select, a.btn {
   &:focus {
     border-radius: 0;
     outline-offset: 3px;
@@ -143,7 +203,7 @@ input, button, select {
   }
 }
 
-input[type=submit], button {
+input[type=submit], button, a.btn {
   &:focus {
     background-color: var(--primary-accent-color);
     color: var(--white);
@@ -186,5 +246,30 @@ input:invalid {
   margin-bottom: 2em;
   h2 {
     margin: 0;
+  }
+}
+
+@media screen and (min-width: 625px) {
+  .header {
+    grid-template-columns: 1fr 4fr;
+  }
+
+  .wrapper {
+    padding: 2em 4em;
+  }
+
+  /* Form styles. */
+  .search {
+    display: grid;
+    grid-template-columns: 7fr 2fr;
+    grid-gap: 1em;
+  }
+
+  .search-label {
+    grid-column: 1/3;
+  }
+  .validate {
+    grid-column: 2/3;
+    color: var(--primary-accent-color);
   }
 }
