--- a/met-search.css
+++ b/met-search.css
@@ -11,6 +11,7 @@
   --secondary-accent-color-seafoam: #26FFE6;
   --white: #ffffff;
   --black: #000000;
+  --gray-lighter: #f0f0f0;
   --gray-light: #bcbaba;
   --gray-medium: #5D5D5D;
   --gray-dark: #212121;
@@ -26,17 +27,14 @@ body {
 
 .header {
   display: grid;
+  align-items: center;
   grid-template-columns: 1fr 1fr;
   padding: 1em;
-  /* max-height: 100px; */
   background-color: var(--black);
   text-align: left;
   h1 {
-    padding-left: 2em;
-    margin-inline: 0;
-    margin-block: 0;
-    font-size: 1.75em;
-    margin: 25px 0 10px;
+    padding-left: 1em;
+    font-size: 1em;
     color: #ffffff;
   }
 }
@@ -83,14 +81,14 @@ ul {
 
 .result {
   display: grid;
+  grid-template-rows: subgrid;
+  align-items: start;
   background-color: #ffffff;
   box-shadow: 0 0 5px rgba(164, 164, 164, .5);
   border: 1px solid var(--gray-light);
   h3 { margin: 0;}
   p {margin: 0;}
-  img {
-    width: 100%;
-  }
+
   hr {
     border: 0;
     height: 1px;
@@ -99,10 +97,17 @@ ul {
   }
   .card {
     display: grid;
+    
+    img {
+      grid-row: 1/2;
+      width: 100%;
+      height: 300px;
+      object-fit: contain;
+      object-position: top;
+      background-color: var(--gray-lighter);
+    }
     .card-body {
-      align-self: end;
-      /* display: grid; */
-      /* grid-template-columns: subgrid; */
+      grid-row: 2/3;
       padding: 0.5em 1em;
     }
   }
@@ -135,7 +140,7 @@ ul {
 .loading-results {
   text-align: center;
   img {
-    max-width: 50vw;
+    max-width: 30vw;
   }
 }
 
@@ -150,6 +155,7 @@ ul {
   grid-template-columns: 1fr;
   grid-gap: 1em;
 }
+
 .validate {
   color: var(--primary-accent-color);
 }
@@ -164,6 +170,7 @@ input, select {
 input[type=search] {
   padding: 0.5em; 
   font-size: 1.5em;
+  max-width: 100%;
 }
 
 input.button, 
@@ -186,6 +193,7 @@ a.btn {
 }
 
 input.button {
+  padding: 0.5em;
   font-size: 1.5em;
 }
 
@@ -208,10 +216,6 @@ input[type=submit], button, a.btn {
     background-color: var(--primary-accent-color);
     color: var(--white);
   }
-}
-
-label {
-  font-weight: 700;
 }
 
 select {
@@ -249,9 +253,27 @@ input:invalid {
   }
 }
 
+@media screen and (min-width: 750px) {
+  .header {
+    h1 {
+      font-size: 1.75em;
+    }
+  }
+  .wrapper {
+    padding: 2em 4em;
+  }
+
+  .search {
+    grid-template-columns: 3fr 1fr;
+  }
+}
+
 @media screen and (min-width: 625px) {
   .header {
     grid-template-columns: 1fr 4fr;
+    h1 {
+      font-size: 1.5em;
+    }
   }
 
   .wrapper {
@@ -260,14 +282,9 @@ input:invalid {
 
   /* Form styles. */
   .search {
-    display: grid;
-    grid-template-columns: 7fr 2fr;
-    grid-gap: 1em;
+    grid-template-columns: 4fr 1fr;
   }
 
-  .search-label {
-    grid-column: 1/3;
-  }
   .validate {
     grid-column: 2/3;
     color: var(--primary-accent-color);
